# my-bjj-journey

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  profiles.yml  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 16abe0f4d3ed_populate_move_table.py  654c8008ac42_populate_position_table.py  995c230f8a7b_create_bjj_schema.py  a3e0e80c6dfa_populate_class_table.py  f44fd69cc60a_create_base_tables.py
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: class_attendance_metrics.sql  class_attendance_metrics.yml  move_metrics.sql  move_metrics.yml  position_metrics.sql  position_metrics.yml
docker/: entrypoint.sh  run_locally.sh
scripts/: tag_image_with_prod.py  validate_tier.sh
src/bjj_journey/: database_utils.py  logging_utils.py  utils.py
src/bjj_journey/data_pipeline/: __init__.py  __main__.py  checks.py
src/bjj_journey/streamlit_app/: data.py  plots.py  utils.py
terraform/: .terraform.lock.hcl  locals.tf  main.tf  service_accounts.tf  services.tf  versions.tf
