[tool.poetry]
name = "bjj-journey"
version = "0.1.0"
description = ""
authors = ["dsli9 <liderek3@gmail.com>"]
readme = "README.md"
packages = [{include = "bjj_journey"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
